versioned_docs/version-7.4.0/api/lineSplit.mdx
---
title: lineSplit
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

export function Map0() {
  "use strict";
  // No blank lines so MDX parses code block as a single "export" node.
  // jsdoc example start
  var line = turf.lineString([
    [120, -25],
    [145, -25],
  ]);
  var splitter = turf.lineString([
    [130, -15],
    [130, -35],
  ]);
  var split = turf.lineSplit(line, splitter);
  //addToMap
  var addToMap = { line, splitter, split };
  split.features[0].properties.stroke = "red";
  split.features[1].properties.stroke = "blue";
  // jsdoc example end
  return <ExampleMap addToMap={addToMap} />;
}

### Description

Split a LineString by another GeoJSON Feature.

### Parameters

| Name     | Type                                                                                                                                  | Description                 |
| -------- | ------------------------------------------------------------------------------------------------------------------------------------- | --------------------------- |
| line     | **[Feature](https://tools.ietf.org/html/rfc7946#section-3.2)&lt;[LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4)&gt;** | LineString Feature to split |
| splitter | **[Feature](https://tools.ietf.org/html/rfc7946#section-3.2)&lt;any&gt;**                                                             | Feature used to split line  |

### Returns

**[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3)&lt;[LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4)&gt;** Split LineStrings

### Examples

```javascript
var line = turf.lineString([
  [120, -25],
  [145, -25],
]);
var splitter = turf.lineString([
  [130, -15],
  [130, -35],
]);

var split = turf.lineSplit(line, splitter);
```

<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/line-split

import { lineSplit } from "@turf/line-split";
const result = lineSplit(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.lineSplit(...);
```

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>
